<resources>
    <string name="app_name">Opus</string>
    <string name="web_client_id">569608213840-cjiuaudfev636o05im5n16lr11blf0ph.apps.googleusercontent.com</string>

    <!--Splash Screen-->
    <string name="opus">OPUS</string>
    <string name="de">Of</string>
    <string name="powered_by">Powered by ©Juan</string>

    <!--Login-->
    <string name="inicio_de_sesion">Inicio De Sesion</string>
    <string name="ingresa_tu_cuenta">Ingresa Tu Cuenta</string>
    <string name="correo">E-mail</string>
    <string name="contraseña">Password</string>
    <string name="forget_my_password">¿Olvidaste Tu Contraseña?</string>
    <string name="Inicio">Inicio</string>
    <string name="registrate">¿Eres Nuevo? Registrate!</string>

    <!--Sign_Up-->
    <string name="bienvenido1">BIENVENIDO,</string>
    <string name="encabezado0">Registrate para empezar a usar Opus!</string>
    <string name="documento">Documento</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellidos</string>
    <string name="telefono">Telefono</string>
    <string name="edad">Fecha Nacimiento</string>
    <string name="contrasena1">Confirmar Password</string>
    <string name="prefesiones">Selectone or several professions to hire</string>

    <string name="terminos">Acepto Terminos y Condiciones</string>
    <string name="registrar">Registrar</string>
    <string name="text0">¿Ya Tienes Cuenta? Inicia Sesion!</string>

    <string-array name="profesiones">
        <item>Oficios Varios</item>
        <item>Desarrollador Back-End</item>
        <item>Desarrollador Front-End</item>
        <item>Desarrollador Full Stack</item>
        <item>Ingeniero En Sistemas</item>
    </string-array>

    <!--Boarding Screen-->
    <!--Titles-->
    <string name="first_slide_title">¿Cuales Son Los Diferentes Roles?</string>
    <string name="second_slide_title">Usuario</string>
    <string name="third_slide_title">Proveedor</string>
    <string name="fourth_slide_title">¿Cual Es Tu Opcion?</string>
    <!--Descriptions-->
    <string name="first_slide_desc">  </string>
    <string name="second_slide_desc">Persona Que Podra Adquirir Los Servicios Ofrecidos Por Proveedores Registrados.</string>
    <string name="third_slide_desc">Un Trabajador Independiente Que Ofrece Sus Servicios A Los Usuarios Que Lo Necesiten O Requieran.</string>
    <string name="fourth_slide_desc">Escoge El De Tu Agrado y Comencemos A Navergar En Opus, Que Estas Esperando.</string>
    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Empecemos</string>

    <!--Perfil-->
    <string name="perfil">PERFIL</string>
    <string name="selecciona_el_perfil_que_se_adecua_a_tus_requerimientos">Selecciona el perfil que se adecua a tus requerimientos</string>
    <string name="Usuario">Quiero adquirir servicios:Selecciona esta opción si estas interasado en adquirir nuestros servicios de profesionales</string>
    <string name="Proovedor">Quiero ofrecer servicios: Selecciona esta opción si estas interesado en ofrecer tus servicios profesionales"</string>
    <string name="continuar">continuar</string>
    <string name="actualizar">Actualizar</string>
    <string name="actualizarPhoto">Actualizar Foto</string>

    <!--Bienvenido-->
    <string name="abejita">abejita</string>
    <string name="bienvenido">BIENVENIDO</string>

    <!--Forget My Password-->
    <string name="fortgot">INGRESA TU CORREO</string>
    <string name="fortgot1">Recupera Tu Contraseña</string>
    <string name="Recuperar">RECUPERAR</string>

    <!--HOME-->
    <!--Categories-->
    <string name="medicina">Medicina</string>
    <string name="ingenieria">Ingenieria</string>
    <string name="licenciatura">licenciatura</string>
    <string name="Danza">Danza</string>

    <!--Titles and Descriptions-->
    <string name="Proveedores">Proveedores</string>
    <string name="Proveedores_description">Contrata tu Provedor lo mas Pronto</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>

</resources>