<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EditProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical">
        <!--Logo-->
        <ImageView
            android:id="@+id/loginImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/opus"
            android:src="@drawable/opus" />

        <!--TextFiel Nombre-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_user"
            android:fontFamily="@font/abel"
            android:textStyle="bold"
            android:hint="@string/nombre">

        </com.google.android.material.textfield.TextInputEditText>

        <!--TextFiel Apellido-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/apellidoTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_user"
            android:fontFamily="@font/abel"
            android:textStyle="bold"
            android:hint="@string/apellido">

        </com.google.android.material.textfield.TextInputEditText>

        <!--TextFiel Telefono-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TelefonoTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/ic_menu_call"
            android:fontFamily="@font/abel"
            android:textStyle="bold"
            android:hint="@string/telefono">

        </com.google.android.material.textfield.TextInputEditText>
        <!--TextFiel Gmail-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/googleg_standard_color_18"
            android:enabled="false"
            android:fontFamily="@font/abel"
            android:textStyle="bold"
            android:hint="@string/correo">

        </com.google.android.material.textfield.TextInputEditText>
        <!--Button Inicio-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/ActualizarDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/actualizar"
            android:textColor="@color/black"
            android:transitionName="buttonSignInTrans" />
    </LinearLayout>

</FrameLayout>