<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".ForgotPassword">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">


            <LinearLayout
                android:id="@+id/error"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <!--Logo-->
                <ImageView
                    android:id="@+id/loginImageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/opus"
                    android:src="@drawable/opus"
                    android:transitionName="logoImageTrans" />
                <!--Titulo-->
                <TextView
                    android:id="@+id/bienvenidoLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abel"
                    android:text="@string/fortgot"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:transitionName="textTrans" />
                <!--Encabezado-->
                <TextView
                    android:id="@+id/continuarlabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abel"
                    android:paddingTop="10dp"
                    android:paddingBottom="30dp"
                    android:text="@string/fortgot1"
                    android:textColor="@color/gray"
                    android:textSize="24sp"
                    android:transitionName="iniciaSesionTextTrans" />
                <!--TextFiel Email-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usuarioTextField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/correo"
                    android:transitionName="emailInputTextTrans">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@android:drawable/sym_action_email"
                        android:fontFamily="@font/abel"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>
                <!--Button Recuperar-->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/recuperarBoton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/Recuperar"
                    android:textColor="@color/black"
                    android:transitionName="buttonSignInTrans" />
                <!--Button No Tengo Cuenta-->
                <TextView
                    android:id="@+id/nuevoUsuario"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/abel"
                    android:text="@string/registrate"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:transitionName="newUserTrans" />
            </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>