<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="Login">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--Logo-->
            <ImageView
                android:id="@+id/loginImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/opus"
                android:src="@drawable/opus"
                android:transitionName="logoImageTrans" />
            <!--Titulo-->
            <TextView
                android:id="@+id/bienvenidoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abel"
                android:text="@string/inicio_de_sesion"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:transitionName="textTrans" />
            <!--Encabezado-->
            <TextView
                android:id="@+id/continuarlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abel"
                android:paddingTop="10dp"
                android:paddingBottom="30dp"
                android:text="@string/ingresa_tu_cuenta"
                android:textColor="@color/gray"
                android:textSize="24sp"
                android:transitionName="iniciaSesionTextTrans" />
            <!--TextFiel Email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usuarioTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="@string/correo"
                android:transitionName="emailInputTextTrans">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@android:drawable/sym_action_email"
                    android:fontFamily="@font/abel"
                    android:textStyle="bold"
                    android:inputType="textEmailAddress">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <!--TextFiel Password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contrasenaTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="@string/contraseña"
                android:transitionName="passwordInputTextTrans"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@android:drawable/ic_lock_idle_lock"
                    android:fontFamily="@font/abel"
                    android:inputType="textPassword"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--Button Olvide Mi Password-->
            <TextView
                android:id="@+id/olvidasteContra"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/abel"
                android:text="@string/forget_my_password"
                android:textAlignment="textEnd"
                android:textColor="@color/gray"
                android:textSize="20sp" />
            <!--Button Inicio-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/inicioSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Inicio"
                android:textColor="@color/black"
                android:transitionName="buttonSignInTrans" />
            <!--Button Google-->
            <com.google.android.gms.common.SignInButton
                android:id="@+id/loginGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">
            </com.google.android.gms.common.SignInButton>

            <!--Button No Tengo Cuenta-->
            <TextView
                android:id="@+id/nuevoUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/abel"
                android:text="@string/registrate"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="bold"
                android:transitionName="newUserTrans" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>